                                                                -*- outline -*-
* Class HierarchicalIterative
  - a bug in right hand side getter by constraint has been fixed,
  - a getter to numerical constraints has been added. It returns the implicit
    and explicit constraints,
  - a method computing whether a solver solution manifold is a submanifold of
    another solver solution manifold has been added.
* Class Implicit has been cleaned up
  - methods setting and getting the right hand side are not deprecated anymore,
  - deprecated methods have been remove.

New in 4.6.0
* Class Implicit has been improved.
  - It does not handle right hand side anymore: methods setting and getting
    right hand side have been made deprecated.
  - It does not store value and Jacobian anymore: setters and getters have been
    made deprecated.
  - The function of the constraint may now have output in a Lie group other
    than a vector space.
  - The documentation has been made more accurate.
* Accessor to right hand side by constraint have been fixed
  - in HierarchicalIterative.

New in 4.5.0
* Move ExplicitRelativeTransformation from hpp-core and refactor
  - explicit_::RelativePose now derive from Explicit and from
    implicit::RelativePose,
  - only implicit formulation is used to evaluate error.
* Rename LieGroupTpl -> LieGroupMap,
* Rename a few classes and make old names deprecated:
  - DifferentiableFunctionStack -> DifferentiableFunctionSet,
  - ExplicitSolver -> ExplicitConstraintSet,
  - HierarchicalIterativeSolver -> solver::HierarchicalIterative,
  - HybridSolver -> solver::BySubstitution.
* Move and rename some classes from hpp-core:
  - core::Equation and core::NumericalConstraints -> constraints::Implicit,
  - core::ExplicitNumericalConstraints -> constraints::Explicit,
  - constraints::Explicit now derive from constraints::Implicit,
  - warning: default comparison type is now equality for all constraints.